--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
     font-family: "Inter", system-ui;
 }
 
-.container {
+.ContentWrapper {
   height: 100vh;
   display: flex;
   align-items: center;
